# laborman

./: .dockerignore  .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  Taskfile.yml  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260606_0001_create_labor_report_tables.py  20260611_0001_drop_mail_settings_cc_bcc.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  repositories.py  routes.py  schemas.py
backend/public/: index.html
backend/public/assets/: index-Df6bWquC.js  index-G9Mwl67C.css
backend/tests/: test_api.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  SETUP_GUIDE.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: MailComposeDialog.tsx  ReportCalendar.tsx  SettingsPanel.tsx  TodayReport.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx  input.tsx  textarea.tsx
frontend/src/lib/: api.ts  date.ts  mail.test.ts  mail.ts
openspec/changes/archive/2026-06-06-add-labor-report-mailto/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-06-add-labor-report-mailto/specs/mail-settings/: spec.md
openspec/specs/mail-settings/: spec.md
openspec/specs/outlook-mail-compose/: spec.md
openspec/specs/report-calendar/: spec.md
openspec/specs/work-report-logging/: spec.md
(+3 files in other folders)
