[project]
name = "laborman"
version = "0.1.0"
description = "Labor report calendar and Outlook mailto helper"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.128.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
